--- a/conf/reset_raid_cooldowns.conf.dist
+++ b/conf/reset_raid_cooldowns.conf.dist
@@ -5,21 +5,46 @@
 [worldserver]
 
 ########################################
-# ResetRaidCooldowns configuration
+# ModResetRaidCooldowns configuration
 ########################################
 #
-#    ResetRaidCooldowns.Enable
-#        Description: Enable ResetRaidCooldowns
+#    ModResetRaidCooldowns.Enable
+#        Description: Enable ModResetRaidCooldowns
 #        Default:     0 - Disabled
 #                     1 - Enabled
 #
-ResetRaidCooldowns.Enable = 1
+ModResetRaidCooldowns.Enable = 1
 
 #
-#    ResetRaidCooldowns.CombatTimeRequired
+#    ModResetRaidCooldowns.CombatTimeRequiredInSeconds
 #        Description: required amount of time, in seconds, to be in combat with boss
 #        Default:     30
 #
 #
 
-ResetRaidCooldowns.CombatTimeRequired = 30
+ModResetRaidCooldowns.CombatTimeRequiredInSeconds = 30
+
+#    ModResetRaidCooldowns.MapIdEnableSettings
+#        Description: A list of map IDs for which the module is enabled.
+#                     Example: ModResetRaidCooldowns.MapIdEnableSettings="533, 532"
+#                     This example would reset cooldowns for players in WOTLK maps:
+#                     Naxxramas (533), The Obsidian Sanctum (615), The Eye of Eternity (616),
+#                     Ulduar (603), Trial of the Crusader (649), Icecrown Citadel (631), Ruby Sanctum (724)
+#
+#        Default:   "533, 615, 616, 603, 649, 631, 724" - WOTLK maps (default)
+#
+#
+
+ModResetRaidCooldowns.MapIdEnableSettings = "533, 615, 616, 603, 649, 631, 724"
+
+#    ModResetRaidCooldowns.MapIdBossIdDisableSettings
+#        Description: A list of mapId-bosId pairs for which resetting is disabled.
+#                     Example ModResetRaidCooldowns.MapIdBossIdDisableSettings = "615 1, 615 2, 615 3"
+#                     This example would disable resets for map The Obsidian Sanctum (615) for bosses Tenebron, Vesperon and Shadron
+#                     Leave empty to disable (default.)
+#
+#        Default: "615 1, 615 2, 615 3, 724 0, 724 1, 724 2, 724 3, 724 4, 724 5" (default)
+#
+#
+
+ModResetRaidCooldowns.MapIdBossIdDisableSettings = "615 1, 615 2, 615 3, 724 0, 724 1, 724 2, 724 3, 724 4, 724 5"
