--- a/conf/reset_raid_cooldowns.conf.dist
+++ b/conf/reset_raid_cooldowns.conf.dist
@@ -10,10 +10,17 @@
 #
 #    ModResetRaidCooldowns.Enable
 #        Description: Enable ModResetRaidCooldowns
+#        Default:     1 - Enabled
+#                     0 - Disabled
+
+ModResetRaidCooldowns.Enable = 1
+
+#    ModResetRaidCooldowns.EnableForHeroics
+#        Description: Reset cooldowns in Heroic Dungeons
 #        Default:     0 - Disabled
 #                     1 - Enabled
 
-ModResetRaidCooldowns.Enable = 1
+ModResetRaidCooldowns.EnableForHeroics = 0
 
 #
 #    ModResetRaidCooldowns.CombatTimeRequiredInSeconds
@@ -25,10 +32,9 @@ ModResetRaidCooldowns.CombatTimeRequiredInSeconds = 30
 #
 #    ModResetRaidCooldowns.DoResetArenaSpells
 #        Description: Remove cooldowns on spells that have less than 10 minutes of cooldown from the Player
-#            similarly to when you enter an arena.
-#
-#        Default:     0 - Disabled
-#                     1 - Enabled (default)
+#                     similarly to when you enter an arena.
+#        Default:     1 - Enabled
+#                     0 - Disabled
 
 ModResetRaidCooldowns.DoResetArenaSpells = 1
 
@@ -36,21 +42,20 @@ ModResetRaidCooldowns.DoResetArenaSpells = 1
 #    ModResetRaidCooldowns.DoResetPetCooldowns
 #        Description: Reset pet Cooldowns and clear their sated/exhaustion debuff
 #        Default:     0 - Disabled
-#                     1 - Enabled (default)
+#                     1 - Enabled
 
-ModResetRaidCooldowns.DoResetPetCooldowns = 1
+ModResetRaidCooldowns.DoResetPetCooldowns = 0
 
 #
 #    ModResetRaidCooldowns.Spells
 #        Description: A list of spells
 #                     Example: ModResetRaidCooldowns.Spells="42650, 2062, 2894, 1122"
-#                     This example would reset the following cooldowns:
+#                     The default resets the following cooldowns:
 #                     42650 army of the dead
 #                     2062 earth elemental totem
 #                     2894 fire elemental totem
 #                     1122 inferno
-#
-#        Default:   "42650, 2062, 2894, 1122" - WOTLK classic (default)
+#        Default:   "42650, 2062, 2894, 1122"
 
 ModResetRaidCooldowns.Spells = "42650, 2062, 2894, 1122"
 
@@ -58,31 +63,7 @@ ModResetRaidCooldowns.Spells = "42650, 2062, 2894, 1122"
 #    ModResetRaidCooldowns.Categories
 #        Description: A list of Categories
 #                     Example: ModResetRaidCooldowns.Categories="26"
-#                     This example would reset Rebirth (26) for players
-#
-#        Default:   "26" - WOTLK classic (default)
+#                     The default resets Rebirth (26) for players
+#        Default:   "26"
 
 ModResetRaidCooldowns.Categories = "26"
-
-#
-#    ModResetRaidCooldowns.MapIdEnableSettings
-#        Description: A list of map IDs for which the module is enabled.
-#                     Example: ModResetRaidCooldowns.MapIdEnableSettings="533, 532"
-#                     This example would reset cooldowns for players in WOTLK maps:
-#                     Naxxramas (533), The Obsidian Sanctum (615), The Eye of Eternity (616),
-#                     Ulduar (603), Trial of the Crusader (649), Icecrown Citadel (631), Ruby Sanctum (724)
-#
-#        Default:   "533, 615, 616, 603, 649, 631, 724" - WOTLK maps (default)
-
-ModResetRaidCooldowns.MapIdEnableSettings = "533, 615, 616, 603, 649, 631, 724"
-
-#
-#    ModResetRaidCooldowns.MapIdBossIdDisableSettings
-#        Description: A list of mapId-bosId pairs for which resetting is disabled.
-#                     Example ModResetRaidCooldowns.MapIdBossIdDisableSettings = "615 1, 615 2, 615 3"
-#                     This example would disable resets for map The Obsidian Sanctum (615) for bosses Tenebron, Vesperon and Shadron
-#                     Leave empty to disable (default.)
-#
-#        Default: "615 1, 615 2, 615 3, 724 0, 724 1, 724 2, 724 3, 724 4, 724 5" (default)
-
-ModResetRaidCooldowns.MapIdBossIdDisableSettings = "615 1, 615 2, 615 3, 724 0, 724 1, 724 2, 724 3, 724 4, 724 5"
